# Noesis

./: .gitattributes  .gitignore  CLAUDE.md  README.md  code-indexer-initial-idea.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/commands/: adr.md  checkpoint.md  eval.md  lesson.md  milestone.md  resume.md  session-log.md
.claude/hooks/: _common.py  checkpoint.py  format_edited_file.py  guard_bash.py  session_end.py  session_start.py
.claude/scripts/: ci_greps.sh  devlog.py
.github/workflows/: ci.yml  docs.yml
architecture-docs/: code-indexer-expanded-architecture.md  code-indexer-initial-architecture-draft.md  m4-reranker-benchmarks.md  m6-agent-connection-guide.md  m8-colab-gpu-verification.md
assets/scripts/: generate_assets.py
dev/: LESSONS.md  bug-hunt-2026-07-06.md
docs/: contributing.md  index.md  releases.md
docs/api/: api.md  app.md  core-indexing.md  core-models.md  core-retrieval.md  core-service.md  index.md  mcp.md
docs/assets/: extra.css
docs/concepts/: architecture.md  chunking.md  freshness.md  indexing-pipeline.md  retrieval.md  security.md
docs/getting-started/: connecting-agents.md  gpu.md  installation.md  quickstart.md
docs/internals/: discovery.md  embedder.md  evaluation.md  git-fast-path.md  reranker.md  runtime.md  sqlite-schema.md  structural-search.md  vector-store.md
docs/project/: decisions.md  lessons.md  milestones.md  risks.md
docs/reference/: configuration.md  dashboard.md  mcp-tools.md  rest-api.md
plugin/noesis/: .mcp.json  CHANGELOG.md  README.md
plugin/noesis/.claude-plugin/: plugin.json
plugin/noesis/skills/noesis-mcp/: SKILL.md
scripts/docs/: gen_releases.py
src/code_index/core/: discovery.py
src/noesis/: app.py  logging_config.py  prefetch.py  runtime.py
src/noesis/api/: __init__.py  dashboard.py  routes.py  security.py
src/noesis/api/static/: app.js  style.css
src/noesis/api/templates/: base.html  index.html  (+2 more)
src/noesis/core/: chunker.py  compute.py  config.py  dashboard.py  discovery.py  embedder.py  gitfast.py  hashdiff.py  indexer.py  jobs.py  languages.py  reranker.py  retriever.py  state.py  structural.py  telemetry.py  vectorstore.py  watcher.py
src/noesis/mcp/: __init__.py  __main__.py  server.py
tests/: test_api.py  test_bugfixes_2026_07_06.py  test_bughunt_2026_07_10.py  test_bughunt_2026_07_11.py  test_bughunt_2026_07_17.py  test_bughunt_2026_07_18.py  test_chunker.py  test_compute.py  test_config.py  test_discovery.py  test_drift_reconciliation.py  test_embedder.py  test_gitfast.py  test_hashdiff.py  test_incremental.py  test_integration_real_model.py  test_local_embedder.py  test_logging_config.py  test_m8_dashboard.py  test_mcp.py  test_register.py  test_reranker.py  test_retriever.py  test_state.py  test_structural.py  test_vectorstore.py  test_watcher.py
tests/eval/: golden.yaml  harness.py  test_golden.py  test_structural_golden.py
tests/eval/baselines/: m2_dense.json
tests/fixtures/chunker/: Sample.java  notes.txt  sample.go  sample.js  sample.py
(+6 files in other folders)
