[project]
name = "code-index"
version = "0.1.0"
description = "Noesis — local hybrid code-retrieval service for AI agents (MCP primary, REST secondary)"
readme = "README.md"
authors = [
    { name = "Anmol", email = "behl1anmol@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pathspec>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
