[project]
name = "noesis"
version = "0.1.0"
description = "Noesis — local hybrid code-retrieval service for AI agents (MCP primary, REST secondary)"
readme = "README.md"
authors = [
    { name = "Anmol", email = "behl1anmol@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "fastapi[standard]>=0.139.0",
    "pathspec>=1.1.1",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-language-pack>=1.12.2",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "astchunk>=0.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: loads the real embedding model (slow, large download); run with -m integration",
]
addopts = "-m 'not integration'"
