[project]
name = "noesis"
version = "0.1.0"
description = "Noesis — local hybrid code-retrieval service for AI agents (MCP primary, REST secondary)"
readme = "README.md"
authors = [
    { name = "Anmol", email = "behl1anmol@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ast-grep-py==0.44.0",
    "einops>=0.8.2",
    "fastapi[standard]>=0.139.0",
    "fastmcp>=3.4.2,<4",
    "jinja2>=3.1.6",
    "pathspec>=1.1.1",
    "qdrant-client[fastembed]>=1.18.0",
    "sentence-transformers>=5.6.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-language-pack>=1.12.2",
    "watchdog>=6.0.0",
]

[tool.uv]
# CLAUDE.md rule 5: fastmcp resolves the mcp SDK; never float past <2 until
# the M8 checkpoint decides. This makes the rule mechanical at resolve time.
constraint-dependencies = ["mcp<2"]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "astchunk>=0.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pyyaml>=6.0",
]
# Docs build only (GitHub Pages). Never a runtime dep — ADR-50.
docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: loads the real embedding model (slow, large download); run with -m integration",
    "golden: M3 eval harness — self-indexes this repo with the real model; run with -m golden",
]
addopts = "-m 'not integration and not golden'"
